--- a/content1.html
+++ b/content1.html
@@ -9,7 +9,7 @@
 <header><h1>About Me</h1></header>
 <nav>
     <ul>
-        <li><a href="Portfolio.html">Introduction</a></li>
+        <li><a href="index.html">Introduction</a></li>
         <li><a href="content1.html">About me</a></li>
         <li><a href="content2.html">Programs</a></li>
         <li><a href="content3.html">Plans</a></li>
