--- a/content3.html
+++ b/content3.html
@@ -9,13 +9,15 @@
 <header><h1>Future Ahead</h1></header>
 <nav>
     <ul>
-        <li><a href="Portfolio.html">Introduction</a></li>
+        <li><a href="index.html">Introduction</a></li>
         <li><a href="content1.html">About me</a></li>
         <li><a href="content2.html">Programs</a></li>
         <li><a href="content3.html">Plans</a></li>
     </ul>
 </nav>
 <body>
-    
+    <p>
+        I currentaly dont know if I am going to college and what job I will have in the future. however I do know that I want to take jobs that revolve around computers.
+    </p>
 </body>
 </html>
