--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </header>
 <nav>
     <ul>
-        <li><a href="Portfolio.html">Introduction</a></li>
+        <li><a href="index.html">Introduction</a></li>
         <li><a href="content1.html">About me</a></li>
         <li><a href="content2.html">Programs</a></li>
         <li><a href="content3.html">Plans</a></li>
