--- a/content1.html
+++ b/content1.html
@@ -35,7 +35,7 @@
         <li class="licenter">scuba diving</li>
         <li class="licenter">video Games</li>
     </ul>
-    <h2>Acheivments that I am proude of</h2>
+    <h2>Acheivments that I am proud of</h2>
     <ul class="centerUL">
         <li class="licenter">getting a gpa of 4.0</li>
         <li class="licenter">Learning how to scuba diving and earning a certification to be able to scuba dive at a max of 40ft</li>
