--- a/index.html
+++ b/index.html
@@ -19,9 +19,17 @@
 </nav>
 <img class="FacialImage" style=padding-right:1em  src="Image.jpg" alt="Ryland Martz" width=275px height="380px">
     <body>
-        <p style = "margin: 0, 1em;">Hello I am Ryland Martz. I am a Junior at Tecumseh High school, along with <a href="https://sictc.evscschools.com/">SICTIC</a> as a partner school. I have a 4.0 GPA (grade point average) in both School and Computer science. The last job I had was at holiday world and worked as a Rides operator and Drones maintenance crew until the season ended. My job as a Ride operator was to ensure guest have a smooth and positive experieance on the rides that I was assigned to. As a Drone maintenance crew I was in charge of helping with setting up the drones for deployment as well as putting the drones back after the drones land.</p>
-        <p style="margin:0, 1em;">My Intrest in computers begain when I was in middle school around when I would become a High schooler. One of the choices of class I could take was Computer science and I thought it would be interesting to learn a little about computers. In the class I learned my first computer language Python, and during this time I became realy interested into computer coding. As a result I took the class Computer science Principles the following year and learned about Blender (a Program that is used to model or sculpt digital images). I took most computer classes for two to three years and stopped for at least one year before joining Sictic as a partner school.</p>
-        <p style="margin: 0, 1em;">I hope to become a Game Developer or to take other careers that revolve around Computers. The reason I wish to be a Game Developer is that my main hobbie is playing Video games and after taking computer science I realized that I could create Video games that I can imagine if I became a Game Developer. However I learned that there are other careers that revolve around computers  other than Game development so as such I strive for more than one goal.</p>
-        <br>
+        <div class="container-fluid">
+            <p>Hello I am Ryland Martz. I am a Junior at <a href="https://tecumseh.warrick.k12.in.us/">Tecumseh High</a> school, along with <a href="https://sictc.evscschools.com/">SICTC</a> as a partner school. I have a 4.0 GPA (grade point average) in both School and Computer science. The last job I had was at <a href="https://holidayworld.com/">Holiday world</a> and worked as a Rides operator and Drones maintenance crew until the season ended. My job as a Ride operator was to ensure guest have a smooth and positive experieance on the rides that I was assigned to. As a Drone maintenance crew I was in charge of helping with setting up the drones for deployment as well as putting the drones back after the drones land.</p>
+            <p>My Intrest in computers begain when I was in middle school around when I would become a High schooler. One of the choices of class I could take was Computer science and I thought it would be interesting to learn a little about computers. In the class I learned my first computer language Python, and during this time I became realy interested into computer coding. As a result I took the class Computer science Principles the following year and learned about Blender (a Program that is used to model or sculpt digital images). I took most computer classes for two to three years and stopped for at least one year before joining Sictic as a partner school.</p>
+            <p>I hope to become a Game Developer or to take other careers that revolve around Computers. The reason I wish to be a Game Developer is that my main hobbie is playing Video games and after taking computer science I realized that I could create Video games that I can imagine if I became a Game Developer. However I learned that there are other careers that revolve around computers  other than Game development so as such I strive for more than one goal.</p>
+        </div>
     </body>
+    <footer>
+        <p>
+
+            8733 Hebbler Ct, Elberfeld USA<br>
+            Contact: <a href="tel: 812-403-3123" id = "mobile">812-403-3123</a>
+        </p>
+    </footer>
 </html>
